# niftyreg_bsi

./: .gitignore  CMakeLists.txt  CMakeSettings.json
reg-apps/: CMakeLists.txt
reg-lib/: CMakeLists.txt  _reg_blocksize_gpu.h  _reg_localTransformation_gpu.cu  _reg_localTransformation_kernels.cu
